src/view/browser/render/snapshots/nifi_lens__view__browser__render__tree_render_tests__tree_row_renders_no_chip_when_unversioned.snap
---
source: src/view/browser/render/mod.rs
expression: "format!(\"{}\", terminal.backend())"
---
"▸  ingest                                                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
