src/view/browser/render/snapshots/nifi_lens__view__browser__render__tree_render_tests__tree_row_renders_rpg_with_empty_target_uri_suppresses_suffix.snap
---
source: src/view/browser/render/mod.rs
assertion_line: 958
expression: "format!(\"{}\", terminal.backend())"
---
"▾  Root                                                                                             "
"    ■ MyRemoteSink                                                                                  "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
