src/view/browser/render/snapshots/nifi_lens__view__browser__render__tree_render_tests__tree_row_renders_rpg_with_transmission_glyph_and_target_uri.snap
---
source: src/view/browser/render/mod.rs
assertion_line: 944
expression: "format!(\"{}\", terminal.backend())"
---
"▾  Root                                                                                             "
"    ▶ MyRemoteSink  → https://nifi-east:8443/nifi                                                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
